[package]
name = "lightningcss-wasm-shim"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "lightningcss_shim"
crate-type = ["cdylib"]

[dependencies]
# nodejs gives Serialize for the output types without pulling in the rest of serde or threads (like "bundler")
lightningcss = { version = "1.0.0-alpha.71", default-features = false, features = [
  "nodejs",
  "sourcemap",
] }
parcel_sourcemap = { version = "2.1.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = false
